# ComfyUIEnvironmentManagement

./: .gitignore  README.md  pyproject.toml  run.bat  start.bat
.github/workflows/: m4.yml
.superpowers/sdd/: progress.md  task-1-report.md  task-13-report.md  task-13-review.md  task-24-report.md  task-5-fix-report.md
app/: __init__.py  app_context.py  i18n.py  main.py
app/bridge/: __init__.py  base.py  catalog_bridge.py  environment_bridge.py  node_bridge.py  process_bridge.py  scanned_service_factory.py  settings_bridge.py  torch_bridge.py
app/qml/: Main.qml  Theme.qml  qmldir
docs/: M4-RELEASE-NOTES.md  M4-SMOKE.md  M5-RELEASE-NOTES.md  M5.1-HOTFIX-NOTES.md  MANUAL_SMOKE.md
docs/superpowers/: M1-LEDGER.md  M2-LEDGER.md
release/: RELEASE-NOTES-v0.6.1.md  RELEASE-NOTES-v0.6.2.md  RELEASE-NOTES-v0.6.3.md  RELEASE-NOTES-v0.6.4.md  RELEASE-NOTES-v0.6.5.md
scripts/: build_release.ps1  build_zip.py  fetch_comfyui_template.ps1  fetch_git_portable.ps1  fetch_git_portable.py  seed_versions.py  smoke.sh  update_translations.bat
shared/: errors.json
src-wpf/: ComfyUI.Manager.sln
src-wpf/ComfyUI.Manager/: App.xaml  App.xaml.cs  ComfyUI.Manager.csproj  MainWindow.xaml  MainWindow.xaml.cs  base_env_profiles.json
src-wpf/Tools.Ts2Resx/: KeyDeriver.cs  Program.cs  ResxEmitter.cs  Tools.Ts2Resx.csproj  TsParser.cs
src/comfy_mgr/: __main__.py  app_context.py  cli.py  paths.py  result.py  settings.py
tests/: conftest.py  test_cli.py  test_cli_catalog.py  test_cli_env.py  test_cli_settings.py  test_cli_start_stop.py  test_cli_torch.py  test_paths.py  test_qapp_fixture.py  test_result.py  test_settings.py  test_version_consistency.py
tests-wpf/ComfyUI.Manager.Tests/: ComfyUI.Manager.Tests.csproj
tests-wpf/Tools.Ts2Resx.Tests/: KeyDeriverTests.cs  ResxEmitterTests.cs  Tools.Ts2Resx.Tests.csproj  TsParserTests.cs
tests/app/: test_app_context.py  test_main_recovery.py
tests/bridge/: conftest.py  test_app_context_wiring.py  test_base_bridge.py  test_catalog_bridge.py  test_environment_bridge.py  test_node_bridge.py  test_process_bridge.py  test_settings_bridge.py  test_torch_bridge.py
tests/db/: test_catalog_repo.py  test_conflict_repo.py  test_connection.py  test_dep_repo.py  test_node_meta_repo.py  test_scanned_node_repo.py  test_scanned_node_repo_locked.py  test_schema_v3.py  test_schema_v4.py  test_version_repo.py
tests/infra/: test_catalog_http_client.py  test_catalog_http_client_ttl.py  test_compat_http_client.py  test_cuda.py  test_event_bus.py  test_fs.py  test_git.py  test_git_portable.py  test_github_client.py  test_http_client.py  test_node_scanner.py  test_pkg_meta.py  (+5 more)
(+276 files in other folders)
