[project]
name = "comfyui-manager"
version = "0.1.0"
description = "ComfyUI 多环境管理工具"
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "pyside6>=6.7.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-qt>=4.4.0",
]

[project.scripts]
comfy-mgr = "comfy_mgr.cli:app"
comfy-mgr-gui = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.poetry]
package-mode = true
packages = [
    { include = "comfy_mgr", from = "src" },
    { include = "app" },
]  # explicit so poetry-core can find the package without setup.py

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
