[project]
name = "comfyui-manager"
version = "0.6.1"
description = "ComfyUI 多环境管理工具"
requires-python = ">=3.10,<3.13"
# M5.2: WPF GUI 不依赖任何 Python control service。pyproject 只保留
# 数据库初始化路径所需的依赖(scripts/create_catalog_db.py 仍用 sqlite3 +
# urllib 等 stdlib,实际"dependencies" 可以清空)。如果未来某天想重新引入
# Python 端 cli/server(例如 CLI-only 工具),再补回 typer / fastapi。
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.poetry]
package-mode = true
packages = [
    { include = "comfy_mgr", from = "src" },
]  # explicit so poetry-core can find the package without setup.py